# mcp-aktools

./: .cursorrules  AGENTS.md  Dockerfile  README.md  docker-compose.yml  opencode.json  pyproject.toml  server.json
.github/workflows/: docker.yaml  pypi.yaml
mcp_aktools/: __init__.py  cache.py  prompts.py  resources.py  server.py
mcp_aktools/shared/: constants.py  fields.py  indicators.py  utils.py
mcp_aktools/tools/: __init__.py  analysis.py  crypto.py  forex.py  funds.py  futures.py  macro.py  market.py  portfolio.py  precious_metals.py  stocks.py
tests/: test_cache.py  test_e2e_mcp.py  test_progress.py  test_resources.py  test_shared_utils.py  test_tools_analysis.py  test_tools_crypto.py  test_tools_forex.py  test_tools_funds.py  test_tools_futures.py  test_tools_macro.py  test_tools_market.py  test_tools_portfolio.py  test_tools_precious_metals.py  test_tools_stocks.py
