[project]
name = "aktools-pro"
version = "0.2.1"
description = "MCP Server for stock and crypto"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aktools", "akshare", "stock", "trading", "mcp", "llm"]
license = { text = "MIT" }
dependencies = [
    "akshare>=1.17.0",
    "cachetools>=6.2.0",
    "diskcache>=5.6.0",
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/aahl/mcp-aktools"
Repository = "https://github.com/aahl/mcp-aktools.git"

[project.scripts]
mcp-aktools = "mcp_aktools:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["mcp_aktools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
